FEAT: Google Auth Flow is implemented

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL="libsql://db-name-user.turso.io"
 DATABASE_AUTH_TOKEN=""
 # A local DB can also be used in dev as well
 # DATABASE_URL="file:local.db"
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
