--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
 		"@tailwindcss/vite": "^4.0.1",
 		"arctic": "^3.2.1",
 		"drizzle-orm": "^0.38.4",
-		"tailwindcss": "^4.0.1"
+		"tailwindcss": "^4.0.1",
+		"web-push": "^3.6.7"
 	},
 	"overrides": {
 		"sharp": "0.32.6",
