--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@tailwindcss/vite": "^4.0.1",
 		"arctic": "^3.2.1",
 		"drizzle-orm": "^0.38.4",
+		"lucide-svelte": "^0.474.0",
 		"tailwindcss": "^4.0.1",
 		"web-push": "^3.6.7"
 	},
