--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
+		"vite-plugin-kit-routes": "^0.8.1",
 		"vite-plugin-pwa": "^0.21.1",
 		"workbox-core": "^7.3.0",
 		"workbox-precaching": "^7.3.0",
