--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DATABASE_AUTH_TOKEN=""
 
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+PUBLIC_VAPID_KEY=""
+VAPID_PRIVATE_KEY=""
+VAPID_SUBJECT="mailto:"
