--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "v1",
+	"name": "u1",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -40,7 +40,8 @@
 		"workbox-precaching": "^7.3.0",
 		"workbox-routing": "^7.3.0",
 		"workbox-strategies": "^7.3.0",
-		"workbox-window": "^7.3.0"
+		"workbox-window": "^7.3.0",
+		"wrangler": "^3.109.1"
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
